Reset sources for azure-storage-file-datalake to the release version 12.18.3.